--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
     <h3>My first Blog</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque nulla quae error nobis suscipit adipisci modi perspiciatis dolore. Quo odit nulla dolor aliquam omnis eius dolore saepe excepturi vel eligendi!</p>
    </div>
+   <div>
+    <h3>My Second Blog</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque nulla quae error nobis suscipit adipisci modi perspiciatis dolore. Quo odit nulla dolor aliquam omnis eius dolore saepe excepturi vel eligendi!</p>
+   </div>
+   <div>
+    <h3>My Third Blog</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque nulla quae error nobis suscipit adipisci modi perspiciatis dolore. Quo odit nulla dolor aliquam omnis eius dolore saepe excepturi vel eligendi!</p>
+   </div>
 </body>
 </html>
