added to push code

--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@
     <h3>My Third Blog</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque nulla quae error nobis suscipit adipisci modi perspiciatis dolore. Quo odit nulla dolor aliquam omnis eius dolore saepe excepturi vel eligendi!</p>
    </div>
+   <div>
+    <h3>How to push Code?</h3>
+    <ul>
+        <li>git add</li>
+        <li>git commit</li>
+        <li>git push</li>
+    </ul>
+   </div>
 </body>
 </html>
